--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
         "symfony/twig-bundle": "5.4.*",
         "symfony/yaml": "5.4.*",
         "twig/extra-bundle": "^2.12|^3.0",
-        "twig/twig": "^2.12|^3.0"
+        "twig/twig": "^2.12|^3.0",
+        "xylis/faker-cinema-providers": "^2.0"
     },
     "config": {
         "allow-plugins": {
