--- a/composer.json
+++ b/composer.json
@@ -75,6 +75,7 @@
         }
     },
     "require-dev": {
+        "bluemmb/faker-picsum-photos-provider": "^2.0",
         "doctrine/doctrine-fixtures-bundle": "^3.4",
         "symfony/debug-bundle": "5.4.*",
         "symfony/maker-bundle": "^1.43",
