creation CRUD + inté role

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -32,22 +32,31 @@ security:
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
-        #- { path: ^\/back\/\w+\/new$, roles: ROLE_ADMIN }
-        #- { path: ^\/back\/\w+\/edit$, roles: ROLE_ADMIN }
-        #- { path: ^\/back\/\w+\/delete$, roles: ROLE_ADMIN }
-        #- { path: ^\/back/movie$, roles: ROLE_MANAGER}
-
-        #- { path: ^/back/season/new$, roles: ROLE_ADMIN }
-        #- { path: ^/back, roles: ROLE_ADMIN }
-        # - { path: ^/profile, roles: ROLE_USER }
-
-        #- { path: ^/$, roles: PUBLIC_ACCESS }
-
-
-
-
-
-
+        # pour eviter les boucles infinies de redirection
+        # on met toujours la page de login en premier et en public
+        - { path: ^/login$, roles: PUBLIC_ACCESS }
+        
+        # /back/casting/{id}/edit 
+        - { path: ^\/back\/\w+\/\d+\/edit$, roles: ROLE_ADMIN }
+        # ? https://symfony.com/doc/5.4/security/access_control.html
+        # POST /back/casting/{id} 
+        - { path: ^\/back\/\w+\/\d+$, roles: ROLE_ADMIN , methods: [POST] }
+        # GET /back/casting/{id} 
+        - { path: ^\/back\/\w+\/\d+$, roles: ROLE_MANAGER, methods: [GET] }
+        # /back/casting/new
+        - { path: ^\/back\/\w+\/new$, roles: ROLE_ADMIN }
+        # /back/casting/
+        - { path: ^\/back\/\w+\/$, roles: ROLE_MANAGER }
+        
+        # /back/movie , /back/main 
+        - { path: ^/back, roles: ROLE_MANAGER }
+        # /movies/999/review/add
+        # - { path: ^\/movies\/\d+\/review\/add$, roles: ROLE_USER }
+        - { path: ^/movies/\d+/review/add$, roles: ROLE_USER }
+        # /movies/999
+        - { path: ^\/movies\/\d+$, roles: PUBLIC_ACCESS }
+        # potentiellement inutile si toutes les autres URL sont restreintes
+        - { path: ^/, roles: PUBLIC_ACCESS }
 
     role_hierarchy:
         # le ROLE_ADMIN inclus le ROLE_MANAGER
@@ -55,7 +64,6 @@ security:
         # le ROLE_MANAGER inclus le ROLE_USER
         ROLE_MANAGER: [ROLE_USER, ROLE_CLIENT]
         # * donc le ROLE_ADMIN inclus le ROLE_USER et le ROLE_CLIENT
-        ROLE_USER: [IS_AUTHENTICATED_FULLY]
 
 when@test:
     security:
