maintenance avec .env

--- a/.env
+++ b/.env
@@ -27,3 +27,11 @@ APP_SECRET=ab2d19db5410187ac0b280f0996459a9
 DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8&charset=utf8mb4"
 # DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=15&charset=utf8"
 ###< doctrine/doctrine-bundle ###
+
+###> MaintenanceSubscriber ###
+MAINTENANCE_ACTIVE=true
+###< MaintenanceSubscriber ###
+
+###> OmdbApi ###
+OMDB_API_KEY="e8ee782"
+###< OmdbApi ###
