--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -11,6 +11,18 @@ security:
                 class: App\Entity\User
                 property: email
     firewalls:
+        login:
+            pattern: ^/api/login
+            stateless: true
+            json_login:
+                check_path: /api/login_check
+                success_handler: lexik_jwt_authentication.handler.authentication_success
+                failure_handler: lexik_jwt_authentication.handler.authentication_failure
+
+        api:
+            pattern:   ^/api
+            stateless: true
+            jwt: ~
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
@@ -35,6 +47,7 @@ security:
         # pour eviter les boucles infinies de redirection
         # on met toujours la page de login en premier et en public
         - { path: ^/login$, roles: PUBLIC_ACCESS }
+        - { path: ^/api/login, roles: PUBLIC_ACCESS }
         
         # /back/casting/{id}/edit 
         - { path: ^\/back\/\w+\/\d+\/edit$, roles: ROLE_ADMIN }
