--- a/.env
+++ b/.env
@@ -33,7 +33,7 @@ MAINTENANCE_ACTIVE=true
 ###< MaintenanceSubscriber ###
 
 ###> OmdbApi ###
-OMDB_API_KEY="e8ee782"
+OMDB_API_KEY="XXXXXXX"
 ###< OmdbApi ###
 ###> lexik/jwt-authentication-bundle ###
 JWT_SECRET_KEY=%kernel.project_dir%/config/jwt/private.pem
