--- a/.env.test
+++ b/.env.test
@@ -1,6 +1,13 @@
 # define your env variables for the test env here
 KERNEL_CLASS='App\Kernel'
 APP_SECRET='$ecretf0rt3st'
+# si on veux désactiver les notices de dépréciations
+#SYMFONY_DEPRECATIONS_HELPER=disabled=1
 SYMFONY_DEPRECATIONS_HELPER=999999
 PANTHER_APP_ENV=panther
 PANTHER_ERROR_SCREENSHOT_DIR=./var/error-screenshots
+
+OMDB_API_KEY="e8ee782"
+DATABASE_URL="mysql://explorateur:Ereul9Aeng@127.0.0.1:3306/oflix?serverVersion=mariadb-10.3.38&charset=utf8mb4"
+
+
