--- a/.env
+++ b/.env
@@ -29,7 +29,7 @@ DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8&charset=
 ###< doctrine/doctrine-bundle ###
 
 ###> MaintenanceSubscriber ###
-MAINTENANCE_ACTIVE=true
+MAINTENANCE_ACTIVE=false
 ###< MaintenanceSubscriber ###
 
 ###> OmdbApi ###
